# HammerIO

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY_POLICY.md  README.md  TERMS_OF_USE.md  install.sh  pyproject.toml
Archive/build-scripts/: README.md
Archive/build-scripts/apps-macos/: APPLE_SILICON.md
Archive/build-scripts/apps-windows/: build.ps1
Archive/deployment/: DEPLOY_TO_GITHUB.md
apps/jetson/: build.sh
apps/macos/: build.sh
benchmarks/: __init__.py  run_benchmarks.py
benchmarks/results/: benchmark.csv  benchmark.json  quick_benchmark.csv  quick_benchmark.json
deploy/: DEPLOY_TO_GITHUB.md  deploy.sh
desktop-integration/: hammerio-action.sh  install.sh
docs/: api.md  architecture.md  benchmarks.md  configuration.md  index.md  jetson.md  quickstart.md  web-dashboard.md
hammerio/: __init__.py  __main__.py  streaming.py  watch.py
hammerio/assets/: hammerio-mime.xml
hammerio/cli/: __init__.py  desktop.py  main.py
hammerio/core/: __init__.py  config.py  hardware.py  license.py  profiler.py  router.py  telemetry.py
hammerio/encoders/: __init__.py  apple.py  audio.py  bulk.py  dataset.py  general.py  image.py  video.py
hammerio/web/: __init__.py  app.py  architecture.py
systemd/: install-services.sh
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_config_roundtrip.py  test_cycles_301_400.py  test_encoder_edge.py  test_encoders.py  test_enhancements.py  test_hardware.py  test_profiler_edge.py  test_router.py  test_router_advanced.py  test_streaming.py  test_telemetry.py  test_web.py
