[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hammerio"
version = "1.0.5"
description = "GPU-accelerated compression for edge AI. GPU where it matters. CPU where it doesn't."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Joseph C McGinty Jr", email = "Joseph@ResilientMindAI.com"},
]
keywords = [
    "compression", "gpu", "nvcomp", "jetson",
    "edge-ai", "zstd", "lz4", "cuda",
    "hammerio", "resilientmind",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Compression",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "zstandard>=0.21.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "toml>=0.10.0",
    "aiofiles>=23.0",
    "watchdog>=3.0.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
gpu = ["opencv-python>=4.8.0", "pynvml>=11.5.0"]
jetson = ["jetson-stats>=4.0.0"]
web = ["flask>=3.0.0", "flask-socketio>=5.3.0"]
dev = ["pytest>=7.4.0", "build", "twine"]
all = ["hammerio[gpu,jetson,web,dev]"]

[project.urls]
Homepage = "https://hammerio.dev"
Documentation = "https://hammerio.dev/docs"
Repository = "https://github.com/Subzero121800/HammerIO"
"Bug Tracker" = "https://github.com/Subzero121800/HammerIO/issues"
"Commercial License" = "https://hammerio.dev/license"

[project.scripts]
hammer = "hammerio.cli.main:app"

[tool.setuptools.packages.find]
include = ["hammerio*"]

[tool.setuptools.package-data]
hammerio = ["assets/*.svg", "assets/*.xml"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
